@@ -2,6 +2,7 @@ lldpd (1.0.19)
  * Changes:
    + Support of both Apple Silicon and Intel for macOS package.
    + Add cvlan/svlan/tpmr capabilities.
+   + Disable LLDP in firmware for Intel X7xx cards on FreeBSD.
 
 lldpd (1.0.18)
  * Changes (breaking):
